name:                serokell-core
version:             0.1.0.0
synopsis:            General-purpose functions by Serokell

homepage:            http://gitlab.serokell.io/serokell-team/serokell-core
license:             MIT
license-file:        LICENSE
author:              Ante Kegalj, Ivan Gromakovsky, Jonn Mostovoy, Mikhail Volhov
maintainer:          Jonn Mostovoy <jm@serokell.io>
copyright:           Serokell
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Serokell.AcidState
                       Serokell.AcidState.ExtendedState
                       Serokell.AcidState.Instances
                       Serokell.AcidState.Statistics
                       Serokell.AcidState.Util
                       Serokell.Arbitrary
                       Serokell.Aeson.Options
                       Serokell.Data.Memory.Units
                       Serokell.Data.Variant
                       Serokell.Util
                       Serokell.Util.Base16
                       Serokell.Util.Base64
                       Serokell.Util.Bench
                       Serokell.Util.Common
                       Serokell.Util.Concurrent
                       Serokell.Util.OptParse
                       Serokell.Util.Exceptions
                       Serokell.Util.Lens
                       Serokell.Util.StaticAssert
                       Serokell.Util.Text
                       Serokell.Util.Verify
  other-modules:       Serokell.Data.Variant.Class
                       Serokell.Data.Variant.Helpers
                       Serokell.Data.Variant.Serialization
                       Serokell.Data.Variant.Variant
  build-depends:       acid-state
                     , aeson
                     , base >= 4.8
                     , base16-bytestring
                     , base64-bytestring
                     , binary
                     , binary-orphans
                     , bytestring
                     , cereal
                     , cereal-vector
                     , clock
                     , directory
                     , either
                     , exceptions
                     , filepath
                     , formatting
                     , hashable >= 1.2.4.0
                     , lens
                     , msgpack
                     , mtl
                     , optparse-applicative
                     , QuickCheck >= 2.8.1
                     , quickcheck-instances
                     , safecopy >= 0.9.0.1
                     , scientific
                     , template-haskell
                     , text
                     , text-format
                     , time-units
                     , transformers
                     , unordered-containers >= 0.2.7.0
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

test-suite serokell-test
  main-is:             Test.hs
  other-modules:       Test.Serokell.Data.Memory.UnitsSpec
                       Test.Serokell.Data.Variant.VariantSpec
                       Test.Serokell.Util.CommonSpec
                       Test.Serokell.Util.BaseSpec
                       Test.Serokell.Util.TextSpec
                       Spec
  type:                exitcode-stdio-1.0
  build-depends:       aeson
                     , base >=4.8 && < 4.9
                     , binary
                     , bytestring
                     , hspec >= 2.1.10
                     , msgpack
                     , QuickCheck >= 2.8.1
                     , quickcheck-instances
                     , scientific
                     , serokell-core
                     , text
                     , text-format
                     , unordered-containers >= 0.2.7.0
                     , vector
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-TN -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
