name:                serokell-util
version:             0.1.2.2
synopsis:            General-purpose functions by Serokell
homepage:            https://github.com/serokell/serokell-util
license:             MIT
license-file:        LICENSE
category:            Utils
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016 Serokell
build-type:          Simple
description:         Serokell-util is a library consisting of functions, which
                     are not included in standard libraries, but are useful for
                     multiple projects. This library was created when it was
                     found that in new projects we need to use some utility
                     functions from existing projects and don't want to
                     copy-paste them.
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Serokell.AcidState
                       Serokell.AcidState.ExtendedState
                       Serokell.AcidState.Instances
                       Serokell.AcidState.Statistics
                       Serokell.AcidState.Util
                       Serokell.Arbitrary
                       Serokell.Aeson.Options
                       Serokell.Data.Memory.Units
                       Serokell.Data.Variant
                       Serokell.Util
                       Serokell.Util.Base
                       Serokell.Util.Base16
                       Serokell.Util.Base64
                       Serokell.Util.Bench
                       Serokell.Util.Binary
                       Serokell.Util.Common
                       Serokell.Util.Concurrent
                       Serokell.Util.I18N
                       Serokell.Util.Parse
                       Serokell.Util.OptParse
                       Serokell.Util.Exceptions
                       Serokell.Util.Lens
                       Serokell.Util.StaticAssert
                       Serokell.Util.Text
                       Serokell.Util.Verify
  other-modules:       Serokell.Data.Variant.Class
                       Serokell.Data.Variant.Helpers
                       Serokell.Data.Variant.Serialization
                       Serokell.Data.Variant.Variant
                       Serokell.Util.Parse.Base64
                       Serokell.Util.Parse.Common
                       Serokell.Util.Parse.Network
  build-depends:       QuickCheck >= 2.8.1
                     , acid-state
                     , aeson >= 0.11.0.0 && <= 1.0.0.0
                     , aeson-extra >= 0.4.0.0
                     , base >= 4.8 && < 5
                     , base16-bytestring
                     , base64-bytestring
                     , binary
                     , binary-orphans
                     , bytestring
                     , cereal
                     , cereal-vector
                     , containers
                     , clock
                     , data-msgpack >= 0.0.8
                     , deepseq
                     , directory
                     , either
                     , exceptions
                     , extra
                     , filepath
                     , formatting
                     , hashable >= 1.2.4.0
                     , lens
                     , monad-control
                     , mtl
                     , optparse-applicative
                     , parsec
                     , quickcheck-instances
                     , safecopy >= 0.9.0.1
                     , scientific
                     , semigroups
                     , stm >= 2.4.4
                     , template-haskell
                     , text
                     , text-format
                     , time-units
                     , transformers
                     , unordered-containers >= 0.2.7.0
                     , vector
                     , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

test-suite serokell-test
  main-is:             Test.hs
  other-modules:       Test.Serokell.Data.Memory.UnitsSpec
                       Test.Serokell.Data.Variant.VariantSpec
                       Test.Serokell.Util.CommonSpec
                       Test.Serokell.Util.ByteStringSpec
                       Test.Serokell.Util.TextSpec
                       Spec
  type:                exitcode-stdio-1.0
  build-depends:       aeson >= 0.11.0.0 && <= 1.0.0.0
                     , base >=4.8
                     , binary
                     , bytestring
                     , cereal
                     , hspec >= 2.1.10
                     , data-msgpack >= 0.0.8
                     , QuickCheck >= 2.8.1
                     , quickcheck-instances
                     , safecopy >= 0.9.0.1
                     , scientific
                     , serokell-util
                     , text
                     , text-format
                     , unordered-containers >= 0.2.7.0
                     , vector
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
