name:                serokell-util
version:             0.9.0
synopsis:            General-purpose functions by Serokell
homepage:            https://github.com/serokell/serokell-util
license:             MIT
license-file:        LICENSE
category:            Utils
author:              Serokell
maintainer:          Serokell <hi@serokell.io>
copyright:           2016-2018 Serokell
build-type:          Simple
description:         Serokell-util is a library consisting of functions, which
                     are not included in standard libraries, but are useful for
                     multiple projects. This library was created when it was
                     found that in new projects we need to use some utility
                     functions from existing projects and don't want to
                     copy-paste them.
cabal-version:       >=2.0

library
  hs-source-dirs:      src
  exposed-modules:     Serokell.Arbitrary
                       Serokell.Data.Memory.Units
                       Serokell.Data.Variant

                       Serokell.Util
                           Serokell.Util.ANSI
                           Serokell.Util.Base
                           Serokell.Util.Base16
                           Serokell.Util.Base64
                           Serokell.Util.Bench
                           Serokell.Util.Common
                           Serokell.Util.Concurrent
                           Serokell.Util.Exceptions
                           Serokell.Util.Group
                           Serokell.Util.I18N
                           Serokell.Util.Lens
                           Serokell.Util.OptParse
                           Serokell.Util.Parse
                           Serokell.Util.StaticAssert
                           Serokell.Util.Text
                           Serokell.Util.Trace
                           Serokell.Util.Verify

  other-modules:       Serokell.Data.Variant.Class
                       Serokell.Data.Variant.Helpers
                       Serokell.Data.Variant.Serialization
                       Serokell.Data.Variant.Variant
                       Serokell.Util.Parse.Base64
                       Serokell.Util.Parse.Common
                       Serokell.Util.Parse.Network

  build-depends:       base >= 4.9 && < 5
                     , aeson >= 1.0 && < 1.4
                     , aeson-options
                     , ansi-terminal
                     , base16-bytestring
                     , base64-bytestring
                     , bytestring
                     , clock
                     , containers >= 0.5.10
                     , deepseq
                     , directory
                     , exceptions
                     , filepath
                     , fmt
                     , formatting >= 6.2.0 && < 6.3
                     , hashable >= 1.2.4.0
                     , lens
                     , log-warper ^>= 1.8.9
                     , monad-control
                     , mtl
                     , optparse-applicative
                     , parsec
                     , QuickCheck >= 2.8.1
                     , quickcheck-instances
                     , scientific
                     , stm >= 2.4.4
                     , template-haskell
                     , text
                     , text-format
                     , transformers
                     , universum ^>= 1.1.0
                     , unordered-containers >= 0.2.7.0
                     , vector
                     , yaml

  if impl(ghc >= 8.2.2)
     build-depends:       o-clock ^>= 0.1

  ghc-options:         -Wall -fno-warn-orphans

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       RecordWildCards
                       DeriveDataTypeable
                       GeneralizedNewtypeDeriving
                       NoImplicitPrelude
                       TypeApplications

test-suite serokell-test
  main-is:             Test.hs
  other-modules:       Test.Serokell.Data.Memory.UnitsSpec
                       Test.Serokell.Data.Variant.VariantSpec
                       Test.Serokell.Util.CommonSpec
                       Test.Serokell.Util.ByteStringSpec
                       Test.Serokell.Util.TextSpec
                       Test.Serokell.Util.VerifySpec
                       Spec
  type:                exitcode-stdio-1.0

  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:       aeson >= 1.0 && < 1.4
                     , base >=4.8
                     , bytestring
                     , hspec >= 2.1.10
                     , QuickCheck >= 2.8.1
                     , quickcheck-instances
                     , safecopy >= 0.9.0.1
                     , scientific
                     , serokell-util
                     , text
                     , text-format
                     , universum ^>= 1.1.0
                     , unordered-containers >= 0.2.7.0
                     , vector
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
